--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    {{- $avatarImgSrc := .Site.Params.AvatarURL -}}
+    {{- if and (isset site.Params "avatarURL") (not (hasPrefix $avatarImgSrc "http")) -}}
+        {{- $avatarImgSrc = (urls.JoinPath $.Site.BaseURL ($.Site.Params.AvatarURL | default "")) -}}
+    {{- end -}}
+    {{- .Scratch.Set "avatarImgSrc" $avatarImgSrc -}}
+
     {{- partial "head.html" . -}}
     <body>
+        <script type="text/javascript">
+            // Immediately set theme on page load
+            setThemeByUserPref();
+        </script>
         {{- partial "header.html" . -}}
-        <div id="content">
+        <main id="content">
         {{- block "main" . }}{{- end }}
-        </div>
+        </main>
         {{- partial "footer.html" . -}}
     </body>
 </html>
